# learn-cpp-gtest

./: CMakeLists.txt  README.md  README.md.backup  maths.h  test_trial.cpp
